<resources>
    <string name="app_name">Huachitos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_de_cachorros">Lista de Empresas</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="color">Color</string>
    <string name="edad">Edad</string>
    <string name="logo">Logo</string>
    <string name="estado">Estado</string>
    <string name="id_appi">Id Appi</string>
    <string name="desc_fisica">Desc Fisica</string>
    <string name="desc_personalidad">Desc Personalidad</string>
    <string name="desc_adicional">Desc Adicional</string>
    <string name="esterilizado">Esterilizado</string>
    <string name="vacunas">Vacunas</string>
    <string name="imagen">Imagen</string>
    <string name="equipo">Equipo</string>
    <string name="region">Region</string>
    <string name="comuna">Comuna</string>
    <string name="correo">Correo</string>
</resources>


